tooling/base/harbor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
spec:
  parentRefs:
    - name: platform-private
      namespace: infrastructure
  hostnames:
    - "harbor.priv.${domain_name}"
  rules:
    - backendRefs:
        - name: harbor-core
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /chartrepo/
    - backendRefs:
        - name: harbor-core
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /c/
    - backendRefs:
        - name: harbor-portal
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
    - backendRefs:
        - name: harbor-core
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /api/
    - backendRefs:
        - name: harbor-core
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /service/
    - backendRefs:
        - name: harbor-core
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /v2/
